# mamba

./: .clang-format  .gitmodules  CMakeLists.txt  build.sh  main.cpp  run.sh
sandbox/: CMakeLists.txt
sandbox/breakout/: CMakeLists.txt
sandbox/breakout/src/: breakout.cpp  breakout.hpp  main.cpp
sandbox/example/: CMakeLists.txt  main.cpp
sandbox/example/shaders/: button.frag  button.vert
sandbox/example/src/: button.cpp  button.hpp  color_layers.hpp  main.cpp
src/: CMakeLists.txt  app.cpp  app.hpp  event.hpp  input.hpp  input_events.hpp  layer.cpp  layer.hpp  layer_stack.hpp  main.cpp  window.cpp  window.hpp  window_events.hpp
src/physics/: collision.hpp
src/renderer/: CMakeLists.txt  camera.cpp  camera.hpp  camera_controller.cpp  camera_controller.hpp  font.cpp  font.hpp  gpu_buffer.hpp  index_buffer.cpp  index_buffer.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  vertex_array.cpp  vertex_array.hpp  vertex_buffer.cpp  vertex_buffer.hpp
src/renderer/fonts/: fonts.cpp.in  fonts.hpp  generate_fonts.cmake
src/renderer/shaders/: circle.frag  circle.vert  generate_shaders.cmake  quad.frag  quad.vert  shaders.hpp  shaders.hpp.in  text.frag  text.vert
